# tf-lang

./: .actrc  .dockerignore  .gitattributes  .gitignore  .npmrc  AGENTS.md  AGENT_LOG.md  B2-COMPLIANCE.md  CHANGELOG.md  CHANGES.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  OBS_LOG.md  PR_REPORT.md  README-TF-STUDIO-SEED.md  README.md  REPORT.md  TODO.md  agents.md  agents.t2-addon.md  clean.patch  docker-compose.yml  fixed.patch  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repair_patch.py
.act/: inputs.json  pr.json
.codex/: ADR.md  AGENTS.md  ALIGNER-MASTER.md  JOURNAL.md  LESSONS.md  MASTER-PROMPT.md  PLAN-0.2.md  agent-index.yml  agents.md  lint-vectors.mjs  tasks.json
.codex/agents/: coder-cli.md  coder-cloud.md
.codex/briefs/: A4.md  A5.md  A6.md  A7.md  B1.md  B2.md  C1.md  D1.md  F1.md  F2.md
.codex/knowledge/: C1.md  D1.md  README.md
.codex/polish/: A7.md  B1.md  B2-nits.md  B2.md
.codex/reviews/: F1_1 agent runs 78-81.md
.codex/scripts/: README.md  analyze_pauses.py  build-index.py  build-tasks-json.mjs  fs_watch.sh  (+21 more)
.devcontainer/: devcontainer.json
.gemini/: config.yaml  styleguide.md
.githooks/: pre-commit  pre-push
.github/: .secrets.example  .vars.example  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  release.yml
.golden/: ro-mini.out.txt
.review/: TODO.md
adapters/: registry.json
archive/: AGENTS-0.5.md
catalogs/: frontend_primitives.yaml  information_primitives.yaml  interaction_interface.yaml  observability_telemetry.yaml  policy_governance.yaml  process_computation.yaml  resource_infrastructure.yaml  security_primitives.yaml  state_identity.yaml
crates/: Cargo.toml
crates/adapters/execution/: Cargo.toml  README.md
crates/adapters/execution/fixtures/: sample-trace.json
crates/adapters/execution/src/: lib.rs
crates/oracles/cli/: Cargo.toml
crates/oracles/cli/src/: main.rs
crates/oracles/conservation/: Cargo.toml
crates/oracles/conservation/src/: lib.rs
crates/oracles/conservation/tests/: oracle.rs
crates/oracles/core/: Cargo.toml  README.md
crates/oracles/core/src/: canonical.rs  context.rs  diff.rs  lib.rs  oracle.rs  result.rs
crates/oracles/core/tests/: core.rs  diff.rs
crates/oracles/determinism/: Cargo.toml  README.md
crates/oracles/determinism/src/: lib.rs
crates/oracles/determinism/tests/: oracle.rs  seeds.json
crates/oracles/idempotence/: Cargo.toml
crates/oracles/idempotence/src/: lib.rs
crates/oracles/idempotence/tests/: oracle.rs
crates/oracles/runner/: Cargo.toml
crates/oracles/runner/src/: main.rs
crates/oracles/transport/: Cargo.toml
crates/oracles/transport/src/: lib.rs
crates/oracles/transport/tests/: oracle.rs
crates/tf-eval-core/: Cargo.toml
crates/tf-eval-core/src/: lib.rs
crates/tf-eval-wasm/: Cargo.toml
crates/tf-eval-wasm/src/: lib.rs
diagrams/: auto.fnol.fasttrack.v1.dot  auto.quote.bind.issue.v2.dot  monitors.fasttrack-24h.dot
docs/: 0.2-RATIONALE.md  0.5-overview.md  Autofix.md  CONTRIBUTING.md  Contracts.md  Digests.md  Linting.md  PR-Notes.md  Sprint-Process.md  T3-trace.md  architecture.md  claims-explorer.html  claims-explorer.test.ts  config.html  configuration.md  genesis.md  index.html  index.md  l0-catalog.md  l0-dsl.md  l0-effects-lattice.md  l0-effects.md  l0-proof-coverage.md  l0-proofs.md  l0-rust.md  l0-tools.md  pilot-l0.md  rulebook-schema.md  testing.md  trace-schema.md
examples/: expand-fnol.mjs
instances/: registry.json  registry.v2.json
laws/: _util.mjs  branch_exclusive.mjs  confidential_envelope.mjs  crdt-merge.mjs  idempotency.mjs  monotonic_log.mjs
meta/: checker.yml
patches/: ROOT.package.merge.json
policy/: capability.lattice.json  policy.allow.json
proposals/: l0-core-basis.json
schema/: tf-branch.schema.json  tf-compare.schema.json  tf-plan.schema.json  tf-spec.schema.json
schemas/: catalog.schema.json  effects.schema.json  error-taxonomy.schema.json  footprint-pattern.schema.json  ids.schema.json  l0-monitor.schema.json  l2-pipeline.schema.json  law.schema.json  manifest.schema.json  manifest.v0.4.schema.json  primitive.schema.json  trace.schema.json  trace.v0.4.schema.json
scripts/: app-order-publish.mjs  assert-kernel-only.mjs  autofix-catalog.mjs  baseline-capture.mjs  build-docs.mjs  catalog-lint.mjs  check-ambient-stubs.sh  check-breaking.mjs  check-fixtures-json.ts  cross-parity-ts-rs.mjs  determinism-check.sh  effects-summary.mjs  emit-alloy-auth.mjs  emit-alloy.mjs  emit-smt-laws-suite.mjs  emit-smt-laws.mjs  emit-smt-props.mjs  emit-smt.mjs  full-determinism.sh  generate-rs-run.mjs  generate-rs.mjs  golden.sh  graph-ir.mjs  hash-jsonl.mjs  install-fresh.mjs  judge-sprint.mjs  keep-main-only.sh  lattice-report.mjs  lint-catalog.mjs  monitor-effects.mjs  monitor-expand.mjs  normalize-commute.mjs  oracle-core-results  pick-winner.mjs  pilot-build-run.mjs  pilot-clock.mjs  pilot-full-build-run.mjs  pilot-full-lib.mjs  pilot-full-parity.mjs  pilot-handwritten.mjs  (+24 more)
tasks/: T1_ORACLES_EPIC.md  T2_RUNTIME_EPIC.md  T3_ORACLES_EPIC.md  run-examples.sh  run-fnol.sh
tests/: adapters-inmem.test.mjs  adapters-misconfig.test.mjs  alloy-auth.test.mjs  alloy-emit.test.mjs  app-order-publish.test.mjs  audit.test.mjs  catalog-seed.test.mjs  checker.test.mjs  codegen-adapters-wireup.test.mjs  codegen-rs.test.mjs  cross-parity-ts-rs.test.mjs  docgen.test.mjs  dsl-fmt.test.mjs  dsl-literals.test.mjs  dsl-show.test.mjs  effect-lattice.test.mjs  effects-deriver.test.mjs  manifest-schema.test.mjs  manifest.test.mjs  normalize-commute.test.mjs  normalize-laws.test.mjs  pages-workflow.test.mjs  parser-and-normalizer.test.mjs  pilot-full-parity.test.mjs  pilot-min.test.mjs  pilot-parity.test.mjs  policy-authorize.test.mjs  proof-tags.json  proof_tags.json  proofs-coverage.test.mjs  provenance-status-trace.test.mjs  regions.test.mjs  run-ir.test.mjs  runner-caps.test.mjs  runtime-verify.test.mjs  smt-emit.test.mjs  smt-laws-extend.test.mjs  smt-laws.test.mjs  smt-props.test.mjs  test-harness-header-validation.test.mjs  (+7 more)
tools/: link-checker.mjs
(+608 files in other folders)
