[workspace]
members = [
    "crates/oracles/core",
    "crates/oracles/determinism",
    "packages/tf-lang-l0-rs"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
