[workspace]
members = [
  "oracles/core",
  "oracles/determinism",
  "oracles/conservation",
  "oracles/idempotence",
  "oracles/transport",
  "adapters/execution"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
