[package]
name = "tf-oracles-conservation"
version = "0.1.0"
edition = "2021"
description = "Conservation oracle verifying resource deltas"
license = "MIT"

[lib]
name = "tf_oracles_conservation"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tf-oracles-core = { path = "../core" }
