[package]
name = "tf-oracles-core"
version = "0.1.0"
edition = "2021"
authors = ["TF-Lang Team"]
description = "Shared oracle interfaces and helpers for TF-Lang"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
