[package]
name = "tf-oracles-core"
version = "0.1.0"
edition = "2021"
authors = ["LexLattice"]
description = "Shared oracle contracts and deterministic helpers"
license = "MIT"

[lib]
name = "tf_oracles_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
