[package]
name = "tf-oracles-determinism"
version = "0.1.0"
edition = "2021"
authors = ["TF-Lang Team"]
description = "Determinism oracle ensuring identical checkpoints and final states across runtimes"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tf-oracles-core = { path = "../core" }

[dev-dependencies]
proptest = "1.5"
serde_json = { workspace = true }
