[package]
name = "tf-oracles-determinism"
version = "0.1.0"
edition = "2021"
description = "Determinism oracle for TF-Lang runtimes"
license = "MIT"

[lib]
name = "tf_oracles_determinism"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tf-oracles-core = { path = "../core" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.4"
