[package]
name = "tf-oracles-idempotence"
version = "0.1.0"
edition = "2021"
description = "Idempotence oracle for repeated application stability"
license = "MIT"

[lib]
name = "tf_oracles_idempotence"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tf-oracles-core = { path = "../core" }
