[package]
name = "tf-oracles-transport"
version = "0.1.0"
edition = "2021"
description = "Transport oracle for TF-Lang runtimes"
license = "MIT"

[lib]
name = "tf_oracles_transport"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tf-oracles-core = { path = "../core" }
thiserror = { workspace = true }
